[tool.poetry]
name = "ahc-tool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.15.0"
dash-auth = "^2.2.0"
pandas = "^2.2.1"
dash-bootstrap-components = "^1.5.0"
dash-daq = "^0.5.0"
pydantic = "^2.6.2"


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.10.0"
python-lsp-ruff = "^2.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
